setlx2python/grammar/SetlXgrammarParser.py
# Generated from grammar/SetlXgrammar.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys


from .types import *



class SetlXgrammarParser ( Parser ):

    grammarFileName = "SetlXgrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'('", "')'", "'{'", "'static'", 
                     "'}'", "'if'", "'else'", "'switch'", "'case'", "':'", 
                     "'default'", "'for'", "'|'", "'while'", "'do'", "';'", 
                     "'try'", "'catchLng'", "'catchUsr'", "'catch'", "'check'", 
                     "'afterBacktrack'", "'backtrack'", "'break'", "'continue'", 
                     "'exit'", "'return'", "'assert'", "','", "'+='", "'-='", 
                     "'*='", "'/='", "'\\='", "'%='", "'match'", "'scan'", 
                     "'using'", "'regex'", "'as'", "':='", "'.'", "'['", 
                     "']'", "'_'", "'<==>'", "'<!=>'", "'|->'", "'|=>'", 
                     "'=>'", "'||'", "'&&'", "'=='", "'!='", "'<'", "'<='", 
                     "'>'", "'>='", "'in'", "'notin'", "'+'", "'-'", "'*'", 
                     "'/'", "'\\'", "'%'", "'><'", "'+/'", "'*/'", "'**'", 
                     "'#'", "'!'", "'forall'", "'exists'", "'procedure'", 
                     "'cachedProcedure'", "'closure'", "'rw'", "'<<'", "'>>'", 
                     "'om'", "'true'", "'false'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'..'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ID", "TERM", "NUMBER", "DOUBLE", "RANGE_SIGN", 
                      "STRING", "LITERAL", "LINE_COMMENT", "MULTI_COMMENT", 
                      "WS", "REMAINDER" ]

    RULE_block = 0
    RULE_statement = 1
    RULE_assignmentOther = 2
    RULE_setlxmatch = 3
    RULE_scan = 4
    RULE_regexBranch = 5
    RULE_assignment = 6
    RULE_assignmentDirect = 7
    RULE_assignable = 8
    RULE_assignableVariable = 9
    RULE_expr = 10
    RULE_exprList = 11
    RULE_exprContent = 12
    RULE_lambdaProcedure = 13
    RULE_lambdaParameters = 14
    RULE_implication = 15
    RULE_disjunction = 16
    RULE_conjunction = 17
    RULE_comparison = 18
    RULE_setlxSum = 19
    RULE_product = 20
    RULE_setlxReduce = 21
    RULE_prefixOperation = 22
    RULE_factor = 23
    RULE_termArguments = 24
    RULE_procedure = 25
    RULE_procedureParameters = 26
    RULE_procedureParameter = 27
    RULE_procedureDefaultParameter = 28
    RULE_procedureListParameter = 29
    RULE_call = 30
    RULE_collectionAccessParams = 31
    RULE_callParameters = 32
    RULE_value = 33
    RULE_collectionBuilder = 34
    RULE_iteratorChain = 35
    RULE_iterator = 36
    RULE_matrix = 37
    RULE_vector = 38
    RULE_atomicValue = 39
    RULE_variable = 40
    RULE_condition = 41
    RULE_assignmentList = 42

    ruleNames =  [ "block", "statement", "assignmentOther", "setlxmatch", 
                   "scan", "regexBranch", "assignment", "assignmentDirect", 
                   "assignable", "assignableVariable", "expr", "exprList", 
                   "exprContent", "lambdaProcedure", "lambdaParameters", 
                   "implication", "disjunction", "conjunction", "comparison", 
                   "setlxSum", "product", "setlxReduce", "prefixOperation", 
                   "factor", "termArguments", "procedure", "procedureParameters", 
                   "procedureParameter", "procedureDefaultParameter", "procedureListParameter", 
                   "call", "collectionAccessParams", "callParameters", "value", 
                   "collectionBuilder", "iteratorChain", "iterator", "matrix", 
                   "vector", "atomicValue", "variable", "condition", "assignmentList" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    ID=85
    TERM=86
    NUMBER=87
    DOUBLE=88
    RANGE_SIGN=89
    STRING=90
    LITERAL=91
    LINE_COMMENT=92
    MULTI_COMMENT=93
    WS=94
    REMAINDER=95

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.blk = None
            self._statement = None # StatementContext

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SetlXgrammarParser.StatementContext)
            else:
                return self.getTypedRuleContext(SetlXgrammarParser.StatementContext,i)


        def getRuleIndex(self):
            return SetlXgrammarParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = SetlXgrammarParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_block)

        stmnts = []
            
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 86
                    localctx._statement = self.statement()
                    stmnts.append(localctx._statement.stmnt) 
                self.state = 93
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            localctx.blk = Block(stmnts)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.stmnt = None
            self._ID = None # Token
            self._procedureParameters = None # ProcedureParametersContext
            self.b1 = None # BlockContext
            self.b2 = None # BlockContext
            self.c1 = None # ConditionContext
            self.c2 = None # ConditionContext
            self.b3 = None # BlockContext
            self._setlxmatch = None # SetlxmatchContext
            self._scan = None # ScanContext
            self._iteratorChain = None # IteratorChainContext
            self._condition = None # ConditionContext
            self._block = None # BlockContext
            self.v1 = None # AssignableVariableContext
            self.v2 = None # AssignableVariableContext
            self._expr = None # ExprContext
            self._assignmentOther = None # AssignmentOtherContext
            self._assignment = None # AssignmentContext

        def ID(self):
            return self.getToken(SetlXgrammarParser.ID, 0)

        def procedureParameters(self):
            return self.getTypedRuleContext(SetlXgrammarParser.ProcedureParametersContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SetlXgrammarParser.BlockContext)
            else:
                return self.getTypedRuleContext(SetlXgrammarParser.BlockContext,i)


        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SetlXgrammarParser.ConditionContext)
            else:
                return self.getTypedRuleContext(SetlXgrammarParser.ConditionContext,i)


        def setlxmatch(self):
            return self.getTypedRuleContext(SetlXgrammarParser.SetlxmatchContext,0)


        def scan(self):
            return self.getTypedRuleContext(SetlXgrammarParser.ScanContext,0)


        def iteratorChain(self):
            return self.getTypedRuleContext(SetlXgrammarParser.IteratorChainContext,0)


        def assignableVariable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SetlXgrammarParser.AssignableVariableContext)
            else:
                return self.getTypedRuleContext(SetlXgrammarParser.AssignableVariableContext,i)


        def expr(self):
            return self.getTypedRuleContext(SetlXgrammarParser.ExprContext,0)


        def assignmentOther(self):
            return self.getTypedRuleContext(SetlXgrammarParser.AssignmentOtherContext,0)


        def assignment(self):
            return self.getTypedRuleContext(SetlXgrammarParser.AssignmentContext,0)


        def getRuleIndex(self):
            return SetlXgrammarParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = SetlXgrammarParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)

        else_list = []
        caseList = []
        tryList = []
        expression = None
        condition = None
        static = None
        block = None
        default = None
            
        self._la = 0 # Token type
        try:
            self.state = 304
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.match(SetlXgrammarParser.T__0)
                self.state = 97
                localctx._ID = self.match(SetlXgrammarParser.ID)
                self.state = 98
                self.match(SetlXgrammarParser.T__1)
                self.state = 99
                localctx._procedureParameters = self.procedureParameters(True)
                self.state = 100
                self.match(SetlXgrammarParser.T__2)
                self.state = 101
                self.match(SetlXgrammarParser.T__3)
                self.state = 102
                localctx.b1 = self.block()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==SetlXgrammarParser.T__4:
                    self.state = 103
                    self.match(SetlXgrammarParser.T__4)
                    self.state = 104
                    self.match(SetlXgrammarParser.T__3)
                    self.state = 105
                    localctx.b2 = self.block()
                    self.state = 106
                    self.match(SetlXgrammarParser.T__5)
                    static = localctx.b2.blk


                self.state = 111
                self.match(SetlXgrammarParser.T__5)
                localctx.stmnt = ClassConstructor((None if localctx._ID is None else localctx._ID.text), localctx._procedureParameters.paramList, localctx.b1.blk, static)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.match(SetlXgrammarParser.T__6)
                self.state = 115
                self.match(SetlXgrammarParser.T__1)
                self.state = 116
                localctx.c1 = self.condition()
                self.state = 117
                self.match(SetlXgrammarParser.T__2)
                self.state = 118
                self.match(SetlXgrammarParser.T__3)
                self.state = 119
                localctx.b1 = self.block()
                self.state = 120
                self.match(SetlXgrammarParser.T__5)
                self.state = 133
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 121
                        self.match(SetlXgrammarParser.T__7)
                        self.state = 122
                        self.match(SetlXgrammarParser.T__6)
                        self.state = 123
                        self.match(SetlXgrammarParser.T__1)
                        self.state = 124
                        localctx.c2 = self.condition()
                        self.state = 125
                        self.match(SetlXgrammarParser.T__2)
                        self.state = 126
                        self.match(SetlXgrammarParser.T__3)
                        self.state = 127
                        localctx.b2 = self.block()
                        self.state = 128
                        self.match(SetlXgrammarParser.T__5)
                        else_list.append(IfThenBranch(localctx.c2.cnd,localctx.b2.blk,[])) 
                        			 
                    self.state = 135
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
